# py-blog

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf
frontend/public/: article.html  dashboard.html  edit-article.html  index.html  login.html
frontend/public/css/: style.css
frontend/public/js/: article.js  auth.js  dashboard.js  edit-article.js  login.js  main.js
src/py_blog/: depends.py  main.py
src/py_blog/api/: router.py
src/py_blog/core/: config.py  depends.py  init_db.py  security.py
src/py_blog/models/: articles.py  post.py  users.py
src/py_blog/repositories/: articles.py  interfaces.py  repository.py  users.py
src/py_blog/routers/: articles.py  users.py
src/py_blog/schemas/: articles.py  post.py  users.py
src/py_blog/services/: articles.py  service.py  users.py
src/py_blog/utils/: init_db.py  logger.py  security.py
